--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <img src="femboy1.png" alt="femboy1">
 <img src="femboy2.png" alt="femboy2">
 <h3>PLEASE JOMISSSS</h3>
+<iframe src="https://discord.com/widget?id=1257635836619653191&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </body>
 </html>
